# PossessionNet

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
src/possessionnet/: __about__.py  __init__.py  __main__.py  metrics.py  pipeline.py  types.py
tests/: test_package.py  test_possession_series.py  test_possession_summary.py  test_video_metadata.py
